update the toString method for the Book class using String.format